2004-01-14  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-global-preferences.c: Don't set
	up enums for icon captions or list view sort order, there is
	no fixed set of possible values now.

2004-01-14  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-directory-async.c:
	* libnautilus-private/nautilus-directory-private.h:
	* libnautilus-private/nautilus-file-attributes.h:
	* libnautilus-private/nautilus-file-private.h:
	* libnautilus-private/nautilus-file.c:
	* libnautilus-private/nautilus-file.h:
	Add slow_mime_type file attribute.
	Allow call_when_ready to take a NULL callback, and
	allow these monitors to be duplicated. (Used for
	fire-and-forget attribute reading)
	
	* libnautilus-private/nautilus-mime-actions.c:
	(nautilus_mime_actions_get_minimum_file_attributes):
	Add slow mime type here
	
	* src/file-manager/fm-directory-view.c:
	Get slow mime type on selection
	
	* src/file-manager/fm-properties-window.c:
	Get slow mime type for properties dialog.
	Don't use the same pointer twice for the
	same monitor.

2004-01-13  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/Makefile.am (ui_DATA):
	Add nautilus-list-view-ui.xml

2004-01-13  Danilo Šegan  <dsegan@gmx.net>
 
	* src/nautilus-location-bar.c (drag_data_received_callback): 

	* src/file-manager/fm-search-list-view.c
	(compute_reveal_item_name_and_sensitivity): 

	* src/file-manager/fm-properties-window.c
	(directory_contents_value_field_update): 

	* src/file-manager/fm-directory-view.c
	(fm_directory_view_confirm_multiple_windows): 
	(confirm_delete_directly)
	(fm_directory_view_display_selection_info)
	(confirm_delete_from_trash, copy_or_cut_files)
	(real_update_menus): 

	* libnautilus-private/nautilus-file.c
	(format_item_count_for_display): 

	* components/image_properties/nautilus-image-properties-view.c
	(load_finished): 

	Use ngettext (fixes bug #106702), based on the patch by 
	Christian Neumair <chris@gnome-de.org>.

=== nautilus 2.5.5 ===
